external-crates/move/crates/move-compiler/tests/move_check/expansion/pack_no_fields_single_block_expr.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04016]: too few arguments
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:18
  │
4 │         let _s = S { false };
  │                  ^^^^^^^^^^^ Missing argument for field 'f' in '0x42::M::S'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:4:22
  │
4 │         let _s = S { false };
  │                      ^ Unexpected 'false'. Expected a field expression

error[E04016]: too few arguments
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:5:18
  │
5 │         let _s = S { 0 };
  │                  ^^^^^^^ Missing argument for field 'f' in '0x42::M::S'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:5:22
  │
5 │         let _s = S { 0 };
  │                      ^ Unexpected '<Number>'. Expected a field expression

error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:5:25
  │
2 │     struct S { f: u64 }
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
3 │     fun foo() {
4 │         let _s = S { false };
  │             --   ----------- The type '0x42::M::S' does not have the ability 'drop'
  │             │     
  │             The local variable '_s' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
5 │         let _s = S { 0 };
  │                         ^ Invalid return

error[E06001]: unused value without 'drop'
  ┌─ tests/move_check/expansion/pack_no_fields_single_block_expr.move:5:25
  │
2 │     struct S { f: u64 }
  │            - To satisfy the constraint, the 'drop' ability would need to be added here
  ·
5 │         let _s = S { 0 };
  │             --   -------^ Invalid return
  │             │    │       
  │             │    The type '0x42::M::S' does not have the ability 'drop'
  │             The local variable '_s' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
